--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ node_modules
 .wrangler
 /.svelte-kit
 /build
-/dist
 
 # OS
 .DS_Store
@@ -23,3 +22,5 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+/../generated/prisma
