--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"@tailwindcss/postcss": "^4.1.11",
 		"@vitest/browser": "^3.2.3",
 		"autoprefixer": "^10.4.21",
 		"eslint": "^9.18.0",
