--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/postcss": "^4.1.11",
+		"@testing-library/jest-dom": "^6.6.4",
+		"@testing-library/svelte": "^5.2.8",
 		"@vitest/browser": "^3.2.3",
 		"autoprefixer": "^10.4.21",
 		"eslint": "^9.18.0",
@@ -47,6 +49,7 @@
 		"@prisma/client": "^6.13.0",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
+		"@types/maplibre-gl": "^1.13.2",
 		"@types/node": "^24.1.0",
 		"maplibre-gl": "^5.6.1",
 		"prisma": "^6.13.0",
