✅ Phase 4+ Complete: Mapbox GL Direct Integration Success
- Fixed corrupted arrow function syntax in SouthwestMap.svelte
- Complete migration from MapLibre GL to native Mapbox GL JS
- Removed test component SimpleMapTest.svelte after successful integration
- Simplified architecture using Mapbox GL directly with access token
- Enhanced SouthwestMap with proper Svelte 5 reactivity (, )
- All syntax errors resolved, clean component architecture
- Navigation controls, error handling, and map interaction features working
- Application fully operational on http://localhost:5173
- Updated PROJECT_STATUS.md with latest achievements
- Ready for continued Southwest USA Roadtripper development

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/maplibre-gl": "^1.13.2",
 		"@types/node": "^24.1.0",
+		"mapbox-gl": "^3.14.0",
 		"maplibre-gl": "^5.6.1",
 		"prisma": "^6.13.0",
 		"svelte-maplibre-gl": "^1.0.1"
